codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_spawn_completed_missing_metadata_surfaces_protocol_violation.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Agent spawn failed
  └ Error - protocol violation: completed spawn item missing model, agentsStates[receiver]
    Explore the repo
