codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_spawn_completed_renders_effective_profile_model_and_effort.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 4519
expression: combined
---
• Spawned Robie [explorer] (profile=subxhigh, gpt-5 high)
  └ Explore the repo
