codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_spawn_failed_without_receiver_stays_generic_failure.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Agent spawn failed
  └ Error - Agent spawn failed
    Explore the repo
