codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 4436
expression: combined
---
• Waiting for any of 2 agents
  └ Scout [explorer]
    Builder [implementer]
    Wait mode: any final status


• Wait condition met (any final)
  └ Scout [explorer]: Completed - Done
    Builder [implementer]: Running
