codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_wait_missing_wait_state_renders_generic_history.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 4494
expression: combined
---
• Finished waiting
  └ Scout [explorer]: Completed - Done
