codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__late_user_message_completion_clears_restored_pending_steer_draft_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Codex to do anything

  ? for shortcuts                                            100% context left
