codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__late_user_message_completion_rebases_suffix_edits_after_restored_pending_steer_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
› edited follow-up

                                                             100% context left
