codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__replayed_completed_unified_exec_history.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• Explored
  └ Read chatwidget.rs
