codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__replayed_declined_file_change_failure.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• Added foo.txt (+1 -0)
    1 +hello from resume


✘ Failed to apply patch
